--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="container">
       <div class="card">
-        <div class="title"><h1>Weather Checker</h1></div>
+        <div class="title"><h1>Insta Post Downloader</h1></div>
         <div class="fields">
           <input
             autocomplete="off"
